--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             <div class="logo">
                 <img src="./assets/bibi.png" alt="logo">
             </div>
+            <div class="search-bar">
+                <input type="text" placeholder="Tìm kiếm sản phẩm..." id="search-input">
+                <button id="search-btn">🔍</button>
+            </div>
+            
         
             <div class="menu-container">
                 <button class="menubtn" id="menu-toggle">☰ DANH MỤC</button>
