--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
                 <input type="text" placeholder="Tìm kiếm sản phẩm..." id="search-input">
                 <button id="search-btn">🔍</button>
             </div>
+            <div class="cart-container">
+                <button id="cart-btn">
+                    🛒 <span id="cart-text">Giỏ hàng</span>
+                    <span id="cart-count">0</span>
+                </button>
+            </div>
             
         
             <div class="menu-container">
